# ventouse

./: Cargo.toml  HACKS.md  LICENSE  README.md  RULES.md  todo.md
src/: config.rs  discover.rs  lib.rs  main.rs
src/core/: analyze.rs  declorder.rs  defgraph.rs  finding.rs  mod.rs  model.rs  placement.rs  raw.rs  scopegraph.rs  scopelang.rs  score.rs  wedge.rs
src/lang/: mod.rs
src/lang/cpp/: compdb.rs  lower.rs  mod.rs  prim.rs
src/lang/python/: lower.rs  mod.rs  prim.rs
src/lang/rust/: lower.rs  mod.rs  prim.rs
src/lang/ts/: lower.rs  mod.rs  prim.rs
src/render/: json.rs  mod.rs  text.rs
tests/: DESIGN.md  core_defgraph.rs  core_driver.rs  core_scopegraph.rs  core_wedge.rs  cpp_lang.rs  m3_render.rs  m4_references.rs  m4_scope.rs  m4_warn.rs  rust_lang.rs  ts_lang.rs
tests/fixtures/cpp/: annot.cpp  dirt.cpp  edge.cpp  examples.cpp  mutation.cpp  scope.cpp  self_class.cpp  warn.cpp
tests/fixtures/js/: annot.js  dirt.js  edge.js  examples.js  mutation.js  scope.js  self_class.js  warn.js
tests/fixtures/python/catalog/: 01_local_scope.py  02_definitions.py  03_free_and_crowded.py  README.md
tests/fixtures/python/examples/: good.py  very_bad_code.py  very_very_bad_code.py
tests/fixtures/python/scope/: s1_declared_too_high.py  s2_tight_narrowest_block.py  s3_declared_too_early.py  s4_module_helper.py  s5_import_used_in_one_fn.py  s6_unused_not_scored.py  s7_parameter_excluded.py  sb5_nested_fn.py  (+3 more)
tests/fixtures/rust/: annot.rs  dirt.rs  edge.rs  examples.rs  mutation.rs  scope.rs  self_class.rs  warn.rs
tests/fixtures/ts/: annot.ts  dirt.ts  edge.ts  mutation.ts  self_class.ts  type_only.ts  typed_precision.ts
(+10 files in other folders)
